src/grammars/.antlr/AnnotationParser.java
// Generated from /Users/francisco/Documents/Work/mathex2java-translator/src/grammars/Annotation.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AnnotationParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, REAL=2, SHORT=3, INT=4, FLOAT=5, DOUBLE=6, LONG=7, NAME_TAG=8, 
		RETURN_TAG=9, VARNAME=10, INTEGER=11, BEGIN_TAG=12, END_TAG=13, NEWLINE_TAG=14, 
		COMMENT_TAG=15, EXP_TAG=16, FRAC_TAG=17, SQRT_TAG=18, SUMMATION_TAG=19, 
		SUBSTACK_TAG=20, SIN_TAG=21, COS_TAG=22, TAN_TAG=23, ARCSIN_TAG=24, ARCCOS_TAG=25, 
		ARCTAN_TAG=26, SINH_TAG=27, COSH_TAG=28, TANH_TAG=29, LOG_TAG=30, LN_TAG=31, 
		INT_TAG=32, IINT_TAG=33, IIINT_TAG=34, LT_TAG=35, LNEQ_TAG=36, LNEQQ_TAG=37, 
		LE_TAG=38, LEQ_TAG=39, LEQQ_TAG=40, LEQSLANT_TAG=41, GT_TAG=42, GNEQ_TAG=43, 
		GNEQQ_TAG=44, GEQ_TAG=45, GEQQ_TAG=46, GEQSLANT_TAG=47, CURLY_LF=48, CURLY_RT=49, 
		BRACKET_LF=50, BRACKET_RT=51, SINGLE_QUOTE_TAG=52, COLON_TAG=53, COMMA_TAG=54, 
		DOT_SYMBOL=55, LESSER_SYMBOL=56, LESS_EQUAL_SYMBOL=57, GREATER_SYMBOL=58, 
		GREATER_EQUAL_SYMBOL=59, FACTORIAL_SYMBOL=60, JOIN=61, UNDERSCORE=62, 
		BREAKLINE=63, EULER_NUMBER=64, PARENTHESIS_LF=65, PARENTHESIS_RT=66, HAT=67, 
		EQUAL=68, PLUS=69, MINUS=70, MULTIPLICATION=71, DIVISION=72, ENVIRONMENT_IGNORE=73, 
		WS=74;
	public static final int
		RULE_run = 0, RULE_method_specs = 1, RULE_name_spec = 2, RULE_return_spec = 3, 
		RULE_return_type = 4, RULE_start = 5, RULE_variable_specs = 6, RULE_new_line_declaration = 7, 
		RULE_variables_type_declaration = 8, RULE_variables = 9, RULE_variables_type = 10, 
		RULE_array = 11, RULE_array_dimension = 12, RULE_to_ignore = 13, RULE_end = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"run", "method_specs", "name_spec", "return_spec", "return_type", "start", 
			"variable_specs", "new_line_declaration", "variables_type_declaration", 
			"variables", "variables_type", "array", "array_dimension", "to_ignore", 
			"end"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\\n'", null, null, null, null, null, null, null, null, null, 
			null, "'\\begin'", "'\\end'", null, "'%'", "'\\exp'", "'\\frac'", "'\\sqrt'", 
			"'\\sum'", "'\\substack'", "'\\sin'", "'\\cos'", "'\\tan'", "'\\arcsin'", 
			"'\\arccos'", "'\\arctan'", "'\\sinh'", "'\\cosh'", "'\\tanh'", "'\\log'", 
			"'\\ln'", "'\\int'", "'\\iint'", "'\\iiint'", "'\\lt'", "'\\lneq'", "'\\lneqq'", 
			"'\\le'", "'\\leq'", "'\\leqq'", "'\\leqslant'", "'\\gt'", "'\\gneq'", 
			"'\\gneqq'", "'\\geq'", "'\\geqq'", "'\\geqslant'", "'{'", "'}'", "'['", 
			"']'", "'''", "':'", "','", "'.'", "'<'", "'<='", "'>'", "'>='", "'!'", 
			"'&'", "'_'", "'\\\\'", "'e'", "'('", "')'", "'^'", "'='", "'+'", "'-'", 
			null, "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "REAL", "SHORT", "INT", "FLOAT", "DOUBLE", "LONG", "NAME_TAG", 
			"RETURN_TAG", "VARNAME", "INTEGER", "BEGIN_TAG", "END_TAG", "NEWLINE_TAG", 
			"COMMENT_TAG", "EXP_TAG", "FRAC_TAG", "SQRT_TAG", "SUMMATION_TAG", "SUBSTACK_TAG", 
			"SIN_TAG", "COS_TAG", "TAN_TAG", "ARCSIN_TAG", "ARCCOS_TAG", "ARCTAN_TAG", 
			"SINH_TAG", "COSH_TAG", "TANH_TAG", "LOG_TAG", "LN_TAG", "INT_TAG", "IINT_TAG", 
			"IIINT_TAG", "LT_TAG", "LNEQ_TAG", "LNEQQ_TAG", "LE_TAG", "LEQ_TAG", 
			"LEQQ_TAG", "LEQSLANT_TAG", "GT_TAG", "GNEQ_TAG", "GNEQQ_TAG", "GEQ_TAG", 
			"GEQQ_TAG", "GEQSLANT_TAG", "CURLY_LF", "CURLY_RT", "BRACKET_LF", "BRACKET_RT", 
			"SINGLE_QUOTE_TAG", "COLON_TAG", "COMMA_TAG", "DOT_SYMBOL", "LESSER_SYMBOL", 
			"LESS_EQUAL_SYMBOL", "GREATER_SYMBOL", "GREATER_EQUAL_SYMBOL", "FACTORIAL_SYMBOL", 
			"JOIN", "UNDERSCORE", "BREAKLINE", "EULER_NUMBER", "PARENTHESIS_LF", 
			"PARENTHESIS_RT", "HAT", "EQUAL", "PLUS", "MINUS", "MULTIPLICATION", 
			"DIVISION", "ENVIRONMENT_IGNORE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Annotation.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AnnotationParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RunContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AnnotationParser.EOF, 0); }
		public List<Method_specsContext> method_specs() {
			return getRuleContexts(Method_specsContext.class);
		}
		public Method_specsContext method_specs(int i) {
			return getRuleContext(Method_specsContext.class,i);
		}
		public List<StartContext> start() {
			return getRuleContexts(StartContext.class);
		}
		public StartContext start(int i) {
			return getRuleContext(StartContext.class,i);
		}
		public List<To_ignoreContext> to_ignore() {
			return getRuleContexts(To_ignoreContext.class);
		}
		public To_ignoreContext to_ignore(int i) {
			return getRuleContext(To_ignoreContext.class,i);
		}
		public List<Variable_specsContext> variable_specs() {
			return getRuleContexts(Variable_specsContext.class);
		}
		public Variable_specsContext variable_specs(int i) {
			return getRuleContext(Variable_specsContext.class,i);
		}
		public RunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_run; }
	}

	public final RunContext run() throws RecognitionException {
		RunContext _localctx = new RunContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_run);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(30);
				method_specs();
				setState(31);
				start();
				setState(33);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(32);
					variable_specs();
					}
					break;
				}
				setState(35);
				to_ignore();
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(36);
					match(T__0);
					}
					}
					setState(41);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(44); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BEGIN_TAG) | (1L << NEWLINE_TAG) | (1L << COMMENT_TAG))) != 0) );
			setState(46);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Method_specsContext extends ParserRuleContext {
		public Name_specContext name_spec() {
			return getRuleContext(Name_specContext.class,0);
		}
		public Return_specContext return_spec() {
			return getRuleContext(Return_specContext.class,0);
		}
		public Method_specsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_specs; }
	}

	public final Method_specsContext method_specs() throws RecognitionException {
		Method_specsContext _localctx = new Method_specsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_method_specs);
		try {
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(49);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(48);
					name_spec();
					}
					break;
				}
				setState(52);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(51);
					return_spec();
					}
					break;
				}
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(55);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(54);
					return_spec();
					}
					break;
				}
				setState(58);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(57);
					name_spec();
					}
					break;
				}
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Name_specContext extends ParserRuleContext {
		public TerminalNode COMMENT_TAG() { return getToken(AnnotationParser.COMMENT_TAG, 0); }
		public TerminalNode NAME_TAG() { return getToken(AnnotationParser.NAME_TAG, 0); }
		public TerminalNode COLON_TAG() { return getToken(AnnotationParser.COLON_TAG, 0); }
		public TerminalNode VARNAME() { return getToken(AnnotationParser.VARNAME, 0); }
		public List<TerminalNode> NEWLINE_TAG() { return getTokens(AnnotationParser.NEWLINE_TAG); }
		public TerminalNode NEWLINE_TAG(int i) {
			return getToken(AnnotationParser.NEWLINE_TAG, i);
		}
		public Name_specContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name_spec; }
	}

	public final Name_specContext name_spec() throws RecognitionException {
		Name_specContext _localctx = new Name_specContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_name_spec);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE_TAG) {
				{
				{
				setState(62);
				match(NEWLINE_TAG);
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(COMMENT_TAG);
			setState(69);
			match(NAME_TAG);
			setState(70);
			match(COLON_TAG);
			setState(71);
			match(VARNAME);
			setState(73); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(72);
					match(NEWLINE_TAG);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(75); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Return_specContext extends ParserRuleContext {
		public TerminalNode COMMENT_TAG() { return getToken(AnnotationParser.COMMENT_TAG, 0); }
		public TerminalNode RETURN_TAG() { return getToken(AnnotationParser.RETURN_TAG, 0); }
		public TerminalNode COLON_TAG() { return getToken(AnnotationParser.COLON_TAG, 0); }
		public Return_typeContext return_type() {
			return getRuleContext(Return_typeContext.class,0);
		}
		public List<TerminalNode> NEWLINE_TAG() { return getTokens(AnnotationParser.NEWLINE_TAG); }
		public TerminalNode NEWLINE_TAG(int i) {
			return getToken(AnnotationParser.NEWLINE_TAG, i);
		}
		public Return_specContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_spec; }
	}

	public final Return_specContext return_spec() throws RecognitionException {
		Return_specContext _localctx = new Return_specContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_return_spec);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE_TAG) {
				{
				{
				setState(77);
				match(NEWLINE_TAG);
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(83);
			match(COMMENT_TAG);
			setState(84);
			match(RETURN_TAG);
			setState(85);
			match(COLON_TAG);
			setState(86);
			return_type();
			setState(88); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(87);
					match(NEWLINE_TAG);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(90); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Return_typeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(AnnotationParser.INT, 0); }
		public TerminalNode DOUBLE() { return getToken(AnnotationParser.DOUBLE, 0); }
		public TerminalNode SHORT() { return getToken(AnnotationParser.SHORT, 0); }
		public TerminalNode LONG() { return getToken(AnnotationParser.LONG, 0); }
		public Return_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_type; }
	}

	public final Return_typeContext return_type() throws RecognitionException {
		Return_typeContext _localctx = new Return_typeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_return_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SHORT) | (1L << INT) | (1L << DOUBLE) | (1L << LONG))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public TerminalNode BEGIN_TAG() { return getToken(AnnotationParser.BEGIN_TAG, 0); }
		public List<TerminalNode> NEWLINE_TAG() { return getTokens(AnnotationParser.NEWLINE_TAG); }
		public TerminalNode NEWLINE_TAG(int i) {
			return getToken(AnnotationParser.NEWLINE_TAG, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_start);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE_TAG) {
				{
				{
				setState(94);
				match(NEWLINE_TAG);
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			match(BEGIN_TAG);
			setState(102); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(101);
					match(NEWLINE_TAG);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(104); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_specsContext extends ParserRuleContext {
		public List<New_line_declarationContext> new_line_declaration() {
			return getRuleContexts(New_line_declarationContext.class);
		}
		public New_line_declarationContext new_line_declaration(int i) {
			return getRuleContext(New_line_declarationContext.class,i);
		}
		public Variable_specsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_specs; }
	}

	public final Variable_specsContext variable_specs() throws RecognitionException {
		Variable_specsContext _localctx = new Variable_specsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variable_specs);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(107); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(106);
					new_line_declaration();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(109); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class New_line_declarationContext extends ParserRuleContext {
		public TerminalNode COMMENT_TAG() { return getToken(AnnotationParser.COMMENT_TAG, 0); }
		public List<Variables_type_declarationContext> variables_type_declaration() {
			return getRuleContexts(Variables_type_declarationContext.class);
		}
		public Variables_type_declarationContext variables_type_declaration(int i) {
			return getRuleContext(Variables_type_declarationContext.class,i);
		}
		public TerminalNode COMMA_TAG() { return getToken(AnnotationParser.COMMA_TAG, 0); }
		public List<TerminalNode> NEWLINE_TAG() { return getTokens(AnnotationParser.NEWLINE_TAG); }
		public TerminalNode NEWLINE_TAG(int i) {
			return getToken(AnnotationParser.NEWLINE_TAG, i);
		}
		public New_line_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_new_line_declaration; }
	}

	public final New_line_declarationContext new_line_declaration() throws RecognitionException {
		New_line_declarationContext _localctx = new New_line_declarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_new_line_declaration);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(COMMENT_TAG);
			setState(112);
			variables_type_declaration();
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA_TAG) {
				{
				setState(113);
				match(COMMA_TAG);
				setState(114);
				variables_type_declaration();
				}
			}

			setState(118); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(117);
					match(NEWLINE_TAG);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(120); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variables_type_declarationContext extends ParserRuleContext {
		public TerminalNode BRACKET_LF() { return getToken(AnnotationParser.BRACKET_LF, 0); }
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public TerminalNode BRACKET_RT() { return getToken(AnnotationParser.BRACKET_RT, 0); }
		public TerminalNode COLON_TAG() { return getToken(AnnotationParser.COLON_TAG, 0); }
		public Variables_typeContext variables_type() {
			return getRuleContext(Variables_typeContext.class,0);
		}
		public Variables_type_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables_type_declaration; }
	}

	public final Variables_type_declarationContext variables_type_declaration() throws RecognitionException {
		Variables_type_declarationContext _localctx = new Variables_type_declarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variables_type_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(BRACKET_LF);
			setState(123);
			variables();
			setState(124);
			match(BRACKET_RT);
			setState(125);
			match(COLON_TAG);
			setState(126);
			variables_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesContext extends ParserRuleContext {
		public List<TerminalNode> VARNAME() { return getTokens(AnnotationParser.VARNAME); }
		public TerminalNode VARNAME(int i) {
			return getToken(AnnotationParser.VARNAME, i);
		}
		public TerminalNode COMMA_TAG() { return getToken(AnnotationParser.COMMA_TAG, 0); }
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_variables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(VARNAME);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA_TAG) {
				{
				setState(129);
				match(COMMA_TAG);
				setState(130);
				match(VARNAME);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
